lab1/Test/L1-A-3-74.output
Error Type A at Line 2
Error Type B at Line 6
Error Type B at Line 8
Error Type A at Line 8
Error Type B at Line 13
Error Type B at Line 14
